<resources>
    <string name="app_name">CompanBook</string>
    <string name="title_activity_prueba_menu">PruebaMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="filtrar">Filtrar</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_base_">Base_Activity</string>
    <string name="nombre_de_la_empresa">Nombre de la empresa</string>
    <string name="introduzca_el_cif">Introduzca el CIF</string>
    <string name="introduzca_la_direccion_completa">Introduzca la direccion completa</string>
    <string name="introduzca_una_breve_descripci_n">Introduzca una breve descripción</string>
    <string name="todo">TODO</string>
    <string name="guardar">Guardar</string>
    <string name="info">Recuerde: Debe pulsar el botón aceptar para guardar los cambios</string>
    <string name="VAL_BACK">REGRESAR</string>
    <string name="VAL_IMAGEN">Image</string>
    <string name="breve_descripcion">Breve descripcion</string>
    <string name="palabra_clave">Palabra clave</string>
    <string name="tama_o">Tamaño</string>
    <string name="precio">Precio</string>
    <string name="opcional">Opcional:</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="referencia_del_producto">Referencia del producto</string>
    <string name="empresas_disponibles">Empresas disponibles</string>
    <string name="recomendacion">Recomendación: Guarde esta palabra, ya que sera usada para facilitar la busqueda en el catálogo mediante los filtros</string>
</resources>
