<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Agregar_objeto_catalogo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivFotoProd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_report_image" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="333dp"
            android:layout_height="57dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNomProd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_del_producto" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/divider15"
            android:layout_width="wrap_content"
            android:layout_height="11dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio_del_producto"
                android:inputType="number|numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/divider16"
            android:layout_width="wrap_content"
            android:layout_height="11dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etReferencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/referencia_del_producto" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/divider17"
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="262dp"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPalabraClave"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:hint="@string/palabra_clave" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ivInfoClave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_info" />
        </LinearLayout>

        <View
            android:id="@+id/divider18"
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/breve_descripcion" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/divider19"
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcional" />

        <View
            android:id="@+id/divider20"
            android:layout_width="wrap_content"
            android:layout_height="11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="165dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPotencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio"
                    android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etTamaño"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@android:drawable/ic_menu_edit"
                    android:hint="@string/tama_o"
                    android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider22"
            android:layout_width="wrap_content"
            android:layout_height="36dp" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/animacion_cambio_color_boton"
            android:onClick="Guardar"
            android:text="@string/guardar"
            android:textColor="@color/ColorClaro" />

    </LinearLayout>

</LinearLayout>