<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Perfil_Empresa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingTop="30dp"
        android:paddingRight="40dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivLogo"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:src="@drawable/ic_user"
                app:civ_border_color="#FF000000" />

        </LinearLayout>

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/ic_menu_edit"
                android:hint="@string/nombre_de_la_empresa" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etCIF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/ic_menu_edit"
                android:hint="@string/introduzca_el_cif" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/divider10"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/ic_menu_edit"
                android:hint="@string/introduzca_la_direccion_completa" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/divider11"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@android:drawable/ic_menu_edit"
            android:ems="10"
            android:hint="@string/introduzca_una_breve_descripci_n"
            android:inputType="textMultiLine" />

        <View
            android:id="@+id/divider12"
            android:layout_width="wrap_content"
            android:layout_height="37dp" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/Botones"
            android:foregroundGravity="bottom"
            android:onClick="aceptar"
            android:text="@string/guardar"
            android:textColor="@android:color/background_dark" />

    </LinearLayout>

</LinearLayout>